 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

GLOBAL NEWS - User visible changes.
At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.

Version 4.* - **** * 2002, by Shigio Yamaguchi

* htags: -D(--dynamic) option added.

Version 4.5 - July 4 2002, by Shigio Yamaguchi

* htags: -m(--main-func) option added.
* htags: --style-sheet=<style file> option added.
* htags: --no-javascript option and no_javascript config variable added.
* htags: -g(--gtags) option added.
* htags: -s(--symbols) option and symbols config variable added.
* gctags: --langmap option added.
* gctags: -t and -d option added.
* gtags: pick up macros with noargument, typedef name and enum member.
* gozilla: -d option added.
* gctags: assumes __attribute__, const, volatile, wchar_t as a reserved word
  in C language. assumes __attribute__, explicit, mutable, namespace,
  overload, typename, using as a reserved word in C++ language.

Version 4.4 - March 30 2002, by Shigio Yamaguchi

* gozilla: gozilla return to GLOBAL.
* htags: -o(--other) option added. This option list not only source files
  but also other files like 'README'.
* global: -o(--other) option added. This option search in not only source
  files but also other files like 'README'.
* htags: configuration variable other_files added.
* htags: configuration variable definition_header={no|after|before} added.
* htags: configuration variable enable_grep and enable_idutils added.
* htags: -l(--each-line-tag) option deleted.
  From now on, htags works as if -l flag is always specified.
  But -l(--each-line-tag) option is accepted for backward compatibility.
* global: path conversion optimized and bug fixed.
* gtags.conf: added documentation about variables.
* htags: shut another security hole.
* Some bugs are fixed.

Version 4.3.1 - January 22 2002, by Shigio Yamaguchi
